# Pyroo_hw

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  server.js
controllers/: fire.controller.js
detection-engine/: .dockerignore  .env.example  Dockerfile  README.md  conftest.py  pyproject.toml  requirements.txt
detection-engine/core/: notifications.py
detection-engine/data-engineering/: augment_dataset.py  benchmark_report.py
detection-engine/deployment/: fire_detection_pipeline.py  labels.txt  rtdetr_config.txt
detection-engine/research-baseline/: benchmarks.py  data.yaml  detect.py  dt.py  export.py  hubconf.py  main.py  requirements.txt  test.py  val.py
detection-engine/research-baseline/classify/: predict.py  train.py  val.py
detection-engine/research-baseline/models/: common.py  experimental.py  tf.py  yolo.py
detection-engine/research-baseline/segment/: predict.py  train.py  val.py
detection-engine/research-baseline/utils/: __init__.py  augmentations.py  autoanchor.py  autobatch.py  callbacks.py  dataloaders.py  downloads.py  general.py  loss.py  metrics.py  plots.py  torch_utils.py  triton.py
detection-engine/research-baseline/utils/aws/: resume.py
detection-engine/research-baseline/utils/flask_rest_api/: restapi.py
detection-engine/research-baseline/utils/loggers/: __init__.py
detection-engine/research-baseline/utils/segment/: augmentations.py  dataloaders.py  general.py  loss.py  metrics.py  plots.py
detection-engine/tests/: test_notifications.py
detection-engine/training/: rtdetr_train_spec.yaml
(+52 files in other folders)
