[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyro-detection-engine"
version = "0.1.0"
description = "Fire detection engine using Edge AI"
authors = [{name = "Google Pyro Team", email = "pyro@google.com"}]
dependencies = [
    "boto3",
    "python-dotenv",
    "twilio",
    "opencv-python",
    "numpy",
    "flask",
]
requires-python = ">=3.8"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
ignore = ["E501"]
exclude = ["research-baseline"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true
exclude = ["research-baseline"]
